--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-error-overlay": "^6.0.9",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
@@ -45,9 +46,11 @@
   "devDependencies": {
     "@types/react-dom": "^17.0.11",
     "@types/styled-components": "^5.1.16",
-    "@types/stylis": "^4.0.2"
+    "@types/stylis": "^4.0.2",
+    "prettier": "2.6.2"
   },
   "resolutions": {
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
+    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "react-error-overlay": "6.0.9"
   }
 }
