--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-overlay": "^6.0.9",
+    "react-markdown": "^8.0.3",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
