--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "^15.12.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.2.2",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
