--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-markdown": "^8.0.3",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.5.0",
     "styled-components": "^5.3.3",
     "stylis": "^4.0.10",
     "stylis-plugin-rtl": "^1.1.0",
@@ -49,6 +50,7 @@
   },
   "devDependencies": {
     "@types/react-dom": "^17.0.11",
+    "@types/react-syntax-highlighter": "^15.5.1",
     "@types/styled-components": "^5.1.16",
     "@types/stylis": "^4.0.2",
     "prettier": "2.6.2"
