--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@types/react-syntax-highlighter": "^15.5.1",
     "@types/styled-components": "^5.1.16",
     "@types/stylis": "^4.0.2",
+    "gh-pages": "^4.0.0",
     "prettier": "2.6.2"
   },
   "resolutions": {
