--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reactjs-material-ui-rtl-plugin",
   "version": "0.1.0",
+  "homepage": "https://ElizPN.github.io/react-typical-challenges",
   "private": true,
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.12.1",
@@ -25,6 +26,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
