--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.2.2",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@reduxjs/toolkit": "^1.8.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^12.1.5",
     "@testing-library/user-event": "^12.1.10",
@@ -16,9 +17,11 @@
     "react-dom": "^17.0.2",
     "react-error-overlay": "^6.0.9",
     "react-markdown": "^8.0.3",
+    "react-redux": "^8.0.2",
     "react-router-dom": "6",
     "react-scripts": "4.0.3",
     "react-syntax-highlighter": "^15.5.0",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.3",
     "stylis": "^4.0.10",
     "stylis-plugin-rtl": "^1.1.0",
